# Embedded_Linux

./: README.md
AdminLLinux_Task2/AdminLLinux_Task2/: binary_search.c
Embedded_Linux/AdminLinux_Task3/: task3_script.sh
Embedded_Linux/AdminLinux_Tasks/AdminLLinux_Task2/AdminLLinux_Task2/: .binary_search.c.swp  binary_search
Embedded_Linux/AdminLinux_Tasks/AdminLinux_Task1/: script1.sh  script2.sh
Embedded_Linux/AdminLinux_task5/: Script_task5.sh
Embedded_Linux/EmbeddedLinux_Tasks/TASK4/Source_Code/APP/: TASK1_02.c  TASK1_02.elf
Embedded_Linux/EmbeddedLinux_Tasks/TASK4/Source_Code/MCAL/DIO/: DIO.c  DIO_Config.c  DIO_Config.h
Embedded_Linux/EmbeddedLinux_Tasks/TASK4/Source_Code/MCAL/PORT/: PORT.c  PORT.h  PORT_Config.c  PORT_Config.h
Embedded_Linux/EmbeddedLinux_Tasks/TASK5/Cmake/: CMakeLists.txt
Exam/: log_anlysis.sh
